feat: Integrate FXSkins for a custom look and feel